--- a/Source/RollerBalliOS/RollerBalliOS/RollerBalliOS-Info.plist
+++ b/Source/RollerBalliOS/RollerBalliOS/RollerBalliOS-Info.plist
@@ -30,6 +30,8 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
