Now the player can die!

--- a/Resources/Atlases/Test.bundle/Editor-Info.plist
+++ b/Resources/Atlases/Test.bundle/Editor-Info.plist
@@ -43,6 +43,10 @@
 					<key>CF$UID</key>
 					<integer>61</integer>
 				</dict>
+				<dict>
+					<key>CF$UID</key>
+					<integer>70</integer>
+				</dict>
 			</array>
 		</dict>
 		<dict>
@@ -1476,6 +1480,192 @@
 			<false/>
 		</dict>
 		<string>Track.png</string>
+		<dict>
+			<key>$class</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>11</integer>
+			</dict>
+			<key>NSColorSpace</key>
+			<integer>1</integer>
+			<key>NSComponents</key>
+			<data>
+			MSAxIDEgMQ==
+			</data>
+			<key>NSCustomColorSpace</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>7</integer>
+			</dict>
+			<key>NSRGB</key>
+			<data>
+			MSAwLjk5OTk3NDM3IDAuOTk5OTkxMjk3NwA=
+			</data>
+		</dict>
+		<dict>
+			<key>$class</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>19</integer>
+			</dict>
+			<key>border</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>73</integer>
+			</dict>
+			<key>group00</key>
+			<true/>
+			<key>group01</key>
+			<false/>
+			<key>group02</key>
+			<false/>
+			<key>group03</key>
+			<false/>
+			<key>group04</key>
+			<false/>
+			<key>group05</key>
+			<false/>
+			<key>group06</key>
+			<false/>
+			<key>group07</key>
+			<false/>
+			<key>group08</key>
+			<false/>
+			<key>group09</key>
+			<false/>
+			<key>height</key>
+			<real>384</real>
+			<key>maskAggressively</key>
+			<false/>
+			<key>name</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>72</integer>
+			</dict>
+			<key>radialGradientColor</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>74</integer>
+			</dict>
+			<key>scale</key>
+			<real>1</real>
+			<key>sizeAsString</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>71</integer>
+			</dict>
+			<key>sizeInBlocks</key>
+			<real>1</real>
+			<key>stages</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>76</integer>
+			</dict>
+			<key>type</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>75</integer>
+			</dict>
+			<key>width</key>
+			<real>384</real>
+		</dict>
+		<string>384 X 384</string>
+		<string>saw</string>
+		<integer>0</integer>
+		<dict>
+			<key>$class</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>11</integer>
+			</dict>
+			<key>NSColorSpace</key>
+			<integer>1</integer>
+			<key>NSComponents</key>
+			<data>
+			MSAxIDEgMQ==
+			</data>
+			<key>NSCustomColorSpace</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>7</integer>
+			</dict>
+			<key>NSRGB</key>
+			<data>
+			MSAwLjk5OTk3NDM3IDAuOTk5OTkxMjk3NwA=
+			</data>
+		</dict>
+		<string>Texture</string>
+		<dict>
+			<key>$class</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>18</integer>
+			</dict>
+			<key>NS.objects</key>
+			<array>
+				<dict>
+					<key>CF$UID</key>
+					<integer>77</integer>
+				</dict>
+			</array>
+		</dict>
+		<dict>
+			<key>$class</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>17</integer>
+			</dict>
+			<key>base</key>
+			<true/>
+			<key>blendMode</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>5</integer>
+			</dict>
+			<key>color</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>79</integer>
+			</dict>
+			<key>enableTextureControls</key>
+			<true/>
+			<key>first</key>
+			<false/>
+			<key>last</key>
+			<false/>
+			<key>opacity</key>
+			<real>1</real>
+			<key>primitiveImage</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>78</integer>
+			</dict>
+			<key>repeat</key>
+			<false/>
+			<key>rotation</key>
+			<real>0.0</real>
+			<key>scaleX</key>
+			<real>1</real>
+			<key>scaleY</key>
+			<real>1</real>
+			<key>texture</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>70</integer>
+			</dict>
+			<key>translationX</key>
+			<real>0.0</real>
+			<key>translationY</key>
+			<real>0.0</real>
+			<key>type</key>
+			<dict>
+				<key>CF$UID</key>
+				<integer>75</integer>
+			</dict>
+			<key>uniformResizing</key>
+			<false/>
+		</dict>
+		<string>Saw-Blade.png</string>
 		<dict>
 			<key>$class</key>
 			<dict>
